# yagokoro

./: README.md
yagokoro_modeling/: README.md
yagokoro_recognition/: CMakeLists.txt  README.md  package.xml
yagokoro_recognition/include/yagokoro_recognition/: feature_extraction.hpp  image_feature_matching.hpp
yagokoro_recognition/src/: feature_extraction.cpp  image_feature_matching.cpp
yagokoro_utils/: CMakeLists.txt  README.md  package.xml
yagokoro_utils/cfg/: PointCloudToImage.cfg
yagokoro_utils/include/yagokoro_utils/: pcl_to_cv.hpp  pointcloud_to_image_node.hpp
yagokoro_utils/src/: pointcloud_to_image_node.cpp
yagokoro_vslam/: README.md
